# CompGrafica

./: .editorconfig  .gitignore  Point.cpp  Point.hpp  README.md  Vector.cpp  Vector.hpp  main.cpp  makefile  octave-workspace
primitivos/: Cone.cpp  Cone.hpp  Cube.cpp  Cube.hpp  Cylinder.cpp  Cylinder.hpp  Point.cpp  Point.hpp  Polygon.cpp  Polygon.hpp  Ray.cpp  Ray.hpp  Vector.cpp  Vector.hpp
python/: ambiente.py  camera.py  cone.py  coordinate.py  cube.py  cylinder.py  main.py  material.py  output.txt  plane.py  plate.py  point.py  polygon.py  ray.py  remota.py  sphere.py  test.py  triangle.py
trabalho/: Box.cpp  Box.hpp  CG.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Cluster.cpp  Cluster.hpp  Colliding.hpp  Cone.cpp  Cone.hpp  Coordinate.cpp  Coordinate.hpp  Cylinder.cpp  Cylinder.hpp  Luzes.hpp  Plane.cpp  Plane.hpp  Ray.cpp  Ray.hpp  Result.cpp  Result.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  main.cpp
